fixed not showing images

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -275,7 +275,7 @@ section {
 .section__hero-img {
 	position: relative;
 	padding: 7em;
-	background-image: url('../img/herosmall.jpg');
+	background-image: url('/img/herosmall.jpg');
 	background-size: cover;
 	background-position: center;
 	background-attachment: scroll;
